2010-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/lpc32xx_phycore.cfg: Remove -W* flags.

2010-01-12	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/lpc-ethernet-config.h, include/mmu.h: New files.
	* Makefile.am, configure.ac, preinstall.am, include/bsp.h,
	include/bspopts.h.in, include/irq.h, include/lpc32xx.h, irq/irq.c,
	rtc/rtc-config.c, startup/bspstarthooks.c,
	startup/linkcmds.lpc32xx_phycore: Changes throughout.

2009-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bspopts.h.in: Regenerated.

2009-12-15	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* bsp_specs, configure.ac, console/console-config.c, include/bsp.h,
	include/irq-config.h, include/irq.h, include/lpc32xx.h,
	include/lpc-clock-config.h, irq/irq.c,
	make/custom/lpc32xx_phycore.cfg, Makefile.am, misc/timer.c,
	preinstall.am, README, rtc/rtc-config.c, startup/bspreset.c,
	startup/bspstart.c, startup/bspstarthooks.c,
	startup/linkcmds.lpc32xx_phycore: New files.