@@ -3,3 +3,4 @@ bootloader or U-Boot will be assumed.  Drivers:
 
         o Standard UART 3, 4, 5, 6 (Console = 5, 115200N1)
         o Clock uses TIMER 0
+        o Ethernet
